2008-11-09 Frank Naegler  <typo3@naegler.net>

	* added date view helper to the userList view

2008-11-07 Frank Naegler  <typo3@naegler.net>

	* change getFirstname to getNickname in the profileActionWidget, maybe this should be set by config later.

2008-11-06 Ingo Renner  <ingo@typo3.org>

	* fixed bug #1770: adding label for the settings groups in the privacy apps
	* fixed bug #1776: LLL-Viewhelper: values can't be overwritten by TypoScript
	* fixed bug #1750: edit relationship does'nt work correctly

2008-11-05 Frank Naegler  <typo3@naegler.net>

	* change date viewhelper, so you can define an optional dateformat by marker

2008-11-03 Frank Naegler  <typo3@naegler.net>

	* adding a widgets-widget, with this widget you can collect some other widgets by the widget view helper. we need this for a widget, which shows ever the profile actions, but the image and personal information only, if the user has access to read them.
	* added constants for the default images

2008-10-28 Ingo Renner  <ingo@typo3.org>

	* added a check for existing friendship requests to the profile actions widget

2008-10-24 Ingo Renner  <ingo@typo3.org>

	* cleanup of the localization manager class

2008-10-21 Frank Naegler  <typo3@naegler.net>

	* refactoring of tx_community_viewhelper_GetCObj

2008-10-21 Frank Naegler  <typo3@naegler.net>

	* bugfix TS-Viewhelper, it has returned no array data
	* added new ViewHelper to generate any TS object by calling cObjGetSingle()
	* revert changes of method getResourceId in the abstract community application controller, because the check for a null user is necessary as there's not always a user. for example on the groupProfile application
	* fix method isFriendOfCurrentlyLoggedInUser in AccessManager
	* localize all ajax messages in tx_community_controller_EditGroupApplication

2008-10-20 Ingo Renner  <ingo@typo3.org>
