@@ -25,6 +25,9 @@
 </ul>
 <!-- ###USER_LIST### end -->
 
+<!-- ###NO_RESULTS### begin -->
+<p>no results</p>
+<!-- ###NO_RESULTS### end -->
 
 </body>
 </html>
